--- a/sites/default/html/view/index.html
+++ b/sites/default/html/view/index.html
@@ -1,1 +1,46 @@
-Getting the data
+<div class="table">
+    <ul class="maincontent">
+        <li>
+            <div class="userslist table">
+                
+            </div>
+        </li>
+        <li class="displaycontent">
+            
+        </li>
+        <li>
+            
+            <form name="forminsert" id="forminsert">                
+                <div class="userinsert table">
+                    <ul>
+                        <li>First Name</li>
+                        <li><input type="text" name="firstname" class="firstname" /></li>
+                    </ul>
+
+                    <ul>
+                        <li>Last Name</li>
+                        <li><input type="text" name="lastname" class="lastname" /></li>
+                    </ul>
+
+                    <ul>
+                        <li>Username</li>
+                        <li><input type="text" name="username" class="username" /></li>
+                    </ul>
+
+                    <ul>
+                        <li>Password</li>
+                        <li><input type="text" name="password" class="password" /></li>
+                    </ul>
+                    
+                    <ul>
+                        <li></li>
+                        <li><input type="button" name="submit" class="submit" value="Register My Self" /></li>
+                    </ul>
+                    
+                </div>
+                
+            </form>
+            
+        </li>
+    </ul>
+</div>
