--- a/sites/default/html/assests/css/base.css
+++ b/sites/default/html/assests/css/base.css
@@ -27,6 +27,15 @@ span.search         { padding-top: 3px; color: #ffffff; font-family: roboto; fon
 
 .mainlink   li      { padding-left: 20px; padding-top:  5px;}
 
+
+.userslist          { border: 1px solid #000000; background-color: #e7e7e7; padding: 10px;}
+.userslist li       { padding-top:  5px; padding-right: 20px;}
+
+.userinsert          { padding-left:  30px;}
+.userinsert li       { padding-top: 10px; width: 150px;}
+.userinsert li input { border-radius: 2px; padding: 5px; width: 200px; border: 1px solid #000000; }
+.displaycontent      { padding: 10px; border-right: 1px #4f4f4f solid; }
+
 .content             {
     padding: 30px;
     background-color:  #ffffff;
